---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Activate the correct radio button on gui open
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 02. 28
  Info:
    - Create a control behavior for each lab
    - Position control behavior over the lab's collision box
    - Position the selection boxes for both labs
    - Move the biolab's one off grid a bit
    - Store the cb proxy on the struct
    - Support circuit wires
    - Add initial circuit connection gui
    - Forward lab cb gui opened to lab
    - Make the radio buttons radio
    - Rename entity to single and store in struct
    - Setup the one-to-many proxy container prototype
    - Reach proof of concept status
    - Fix surfaces mode not working
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 28
  Info:
    - Initial commit