@@ -3,6 +3,7 @@ Version: 0.0.3
 Date: ????
   Info:
     - Activate the correct radio button on gui open
+    - Clean up proxies when the owning lab vanishes
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 02. 28
